--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <header>
   <div class="header-wrapper">
     <h1>Our Pricing</h1>
-    <p>Annually Monthly</p>
+    <p>Monthly Anually</p>
 
     <label class="switch">
       <input type="checkbox" name="checkbox" id="check">
